--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -57,6 +57,52 @@
 -->
 
 <!-- ======================================================================= -->
+<h2>Downloads</h2>
+
+<p><a href="https://github.com/phonegap/weinre/downloads">https://github.com/phonegap/weinre/downloads</a>
+
+<!-- ======================================================================= -->
+<h2>2011/07/22 - version 1.5.0</h2>
+
+<ul>
+
+<li><p>The Resources panel now includes an active Databases section.  For any WebSQL
+database that you open, you should see an entry in the expanded section.  For each database,
+you'll see the list of tables owned by the database when the database section
+is expanded.  Note that you need to open
+the database to see it listed here.  Databases which you have previously created
+in other browsing sessions will not be displayed until they are first opened.
+
+<p>Clicking on a database table will dump the database contents to the panel.
+Clicking on the database itself will provide a prompter for you to run SQL 
+commands against that database.  For example, entering 
+<tt>"select * from YourTableNameHere"</tt> 
+will dump the table contents to the panel.
+
+<li><p>Some of the console functions, like <tt>console.log()</tt>, were not handling
+object arguments correctly.  You should now see a an object display.  For example,
+typing <tt>"window"</tt> or <tt>"console.log(window)"</tt> into the console 
+will show you the same object display for the window.
+
+<li><p>The ant build script did not have the correctly-cased file names for some 
+of the files, and the build failed.  This has been fixed.  You should be able
+to do a build on Linux, and other case-sensitive file systems.
+
+<li><p>While weinre already removes some of the Web Inspector panels wholesale,
+there were still a number of meaningless gee-gaws on the panels that we do show.  
+Those have been surgically removed with CSS.
+
+</ul>
+
+<p>issues closed:
+<ul>
+<li> <a href="https://github.com/phonegap/weinre/issues/7">issue 7</a> - support for WebSQL
+<li> <a href="https://github.com/phonegap/weinre/issues/8">issue 8</a> - console.log() etal don't handle object parameters
+<li> <a href="https://github.com/phonegap/weinre/issues/12">issue 12</a> - wrong-cased file names in ant scripts for Linux
+<li> <a href="https://github.com/phonegap/weinre/issues/16">issue 16</a> - hide stuff in the Web Inspector UI that's not used
+</ul>
+
+<!-- ======================================================================= -->
 <h2>2011/05/09 - version 1.4.0</h2>
 <ul>
 <li> better calculation of object's class name. closes <a href="https://github.com/pmuellr/weinre/issues/41">issue 41</a>.
