--- a/Home.html
+++ b/Home.html
@@ -61,6 +61,14 @@
 Pronounced like the word "winery".  Or maybe like the word "weiner".  Who knows,
 really.
 
+<p>Interesting places:
+<ul>
+<li>GitHub: <a href="https://github.com/phonegap/weinre">https://github.com/phonegap/weinre</a>
+<li>Google Group: <a href="http://groups.google.com/group/weinre">http://groups.google.com/group/weinre</a>
+<li>weinre documentation: <a href="http://phonegap.github.com/weinre">http://phonegap.github.com/weinre</a>
+<li>Google Chrome Developer Tools: <a href="http://code.google.com/chrome/devtools/docs/overview.html">http://code.google.com/chrome/devtools/docs/overview.html</a>
+</ul>
+
 <p>It's a debugger for web pages, like 
 FireBug (for FireFox)
 and 
@@ -73,7 +81,9 @@ on a mobile device such as a phone</b>.
 <span class="weinre">weinre</span> reuses the user interface code from the
 <a href="http://trac.webkit.org/wiki/WebInspector">Web Inspector project at WebKit</a>,
 so if you've used Safari's Web Inspector or Chrome's Developer Tools,  
-<span class="weinre">weinre</span> will be very familiar. 
+<span class="weinre">weinre</span> will be very familiar.  If you're not
+familiar with Web Inspector, the link above to Google Chrome Developer Tools
+provides some documentation Real Web Inspector, which <span class="weinre">weinre</span> is based on.
 
 <!--
 <div class="note">
@@ -146,15 +156,6 @@ user interface only runs on WebKit-based browsers.  Sorry folks.
 <p>Find out more by clicking one of the links at the top or bottom of the page 
 - to see a walkthrough of
 how to use it, visit the <a href="TestDrive.html">Test Drive</a>.
-
-<!-- ======================================================== -->
-<h2>Places</h2>
-
-<ul>
-<li>GitHub: <a href="https://github.com/phonegap/weinre">https://github.com/phonegap/weinre</a>
-<li>Documentation: <a href="http://phonegap.github.com/weinre">http://phonegap.github.com/weinre</a>
-<li>Google Group: <a href="http://groups.google.com/group/weinre">http://groups.google.com/group/weinre</a>
-</ul>
 
 <!-- ======================================================== -->
 <h2>Supported Libraries and Platforms</h2>
