change content to moved-to-weinre message

--- a/Building.html
+++ b/Building.html
@@ -1,99 +1,3 @@
-<!doctype html>
+<p>This site has moved to phonegap/weinre.  Please update your links.
 
-<!--
- * weinre is available under *either* the terms of the modified BSD license *or* the
- * MIT License (2008). See http://opensource.org/licenses/alphabetical for full text.
- * 
- * Copyright (c) 2010, 2011 IBM Corporation
--->
-
-<html>
-<head>
-<title>weinre - Building</title>
-<link rel="stylesheet" href="css/main.css" type="text/css">
-<link rel="shortcut icon" href="images/weinre-icon-64x64.png" />
-<script src="scripts/main.js"></script>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-736164-7']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-</head>
-
-<body>
-
-<a class="no-decoration" href="https://github.com/phonegap/weinre"><div class="ribbon">Fork weinre on GitHub</div></a>
-
-<!-- ======================================================================= -->
-<h1 class="page-title">weinre - Building</h1>
-
-<div class="toc">
-  <a href="Home.html">Home</a>
-- <a href="TestDrive.html">Test Drive</a>
-- <a href="Installing.html">Installing</a>
-- <a href="Running.html">Running</a>
-- <a href="MultiUser.html">Multi-User</a>
-- <a href="Security.html">Security</a>
-- <a href="Building.html">Building</a>
-- <a href="ChangeLog.html">ChangeLog</a>
-- <a href="License.html">License</a>
-<p>
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-</div>
-
-<!--
- * weinre is available under *either* the terms of the modified BSD license *or* the
- * MIT License (2008). See http://opensource.org/licenses/alphabetical for full text.
- * 
- * Copyright (c) 2010, 2011 IBM Corporation
--->
-
-<p>The source repository for weinre is maintained at 
-<a href="https://github.com/phonegap/weinre">GitHub</a>.
-
-<p>To build the current version of <span class="weinre">weinre</span>, you will 
-probably want to use Eclipse.  If that's not an option, there is some 
-experimental support in the main ant build script to compile the Java code 
-outside of Eclipse.  Explore the <tt>build.xml</tt> file to see how that's
-done.
-
-<p>At development time, <span class="weinre">weinre</span> consists of 5 Eclipse
-projects.  See the file <tt>README.md</tt> in the
-<tt>weinre.build</tt> project for more instructions on
-how to perform a build.
-
-
-
-<!--
- * weinre is available under *either* the terms of the modified BSD license *or* the
- * MIT License (2008). See http://opensource.org/licenses/alphabetical for full text.
- * 
- * Copyright (c) 2010, 2011 IBM Corporation
--->
-
-<div class="toc">
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-<p>
-  <a href="Home.html">Home</a>
-- <a href="TestDrive.html">Test Drive</a>
-- <a href="Installing.html">Installing</a>
-- <a href="Running.html">Running</a>
-- <a href="MultiUser.html">Multi-User</a>
-- <a href="Security.html">Security</a>
-- <a href="Building.html">Building</a>
-- <a href="ChangeLog.html">ChangeLog</a>
-- <a href="License.html">License</a>
-
-<br><img src="images/weinre-icon-128x128.png">
-</div>
-
-</body>
-</html>
+<p><a href="http://phonegap.github.com/weinre/">http://phonegap.github.com/weinre/</a>
