--- a/Installing.html
+++ b/Installing.html
@@ -1,102 +1,3 @@
-<!doctype html>
+<p>This site has moved to phonegap/weinre.  Please update your links.
 
-<!--
- * weinre is available under *either* the terms of the modified BSD license *or* the
- * MIT License (2008). See http://opensource.org/licenses/alphabetical for full text.
- * 
- * Copyright (c) 2010, 2011 IBM Corporation
--->
-
-<html>
-<head>
-<title>weinre - Installing</title>
-<link rel="stylesheet" href="css/main.css" type="text/css">
-<link rel="shortcut icon" href="images/weinre-icon-64x64.png" />
-<script src="scripts/main.js"></script>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-736164-7']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-</head>
-
-<body>
-
-<a class="no-decoration" href="https://github.com/phonegap/weinre"><div class="ribbon">Fork weinre on GitHub</div></a>
-
-<!-- ======================================================================= -->
-<h1 class="page-title">weinre - Installing</h1>
-
-<div class="toc">
-  <a href="Home.html">Home</a>
-- <a href="TestDrive.html">Test Drive</a>
-- <a href="Installing.html">Installing</a>
-- <a href="Running.html">Running</a>
-- <a href="MultiUser.html">Multi-User</a>
-- <a href="Security.html">Security</a>
-- <a href="Building.html">Building</a>
-- <a href="ChangeLog.html">ChangeLog</a>
-- <a href="License.html">License</a>
-<p>
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-</div>
-
-<!--
- * weinre is available under *either* the terms of the modified BSD license *or* the
- * MIT License (2008). See http://opensource.org/licenses/alphabetical for full text.
- * 
- * Copyright (c) 2010, 2011 IBM Corporation
--->
-
-<p><span class="weinre">weinre</span> is shipped as two archives
-available at
-<a href="https://github.com/phonegap/weinre/archives/master">https://github.com/phonegap/weinre/archives/master</a>
-
-<ul class="spaced">
-
-<li><b><tt>weinre-jar-x.y.z.zip</tt></b>
-<br>This archive includes a Java .jar file.
-
-<li><b><tt>weinre-mac-x.y.z.zip</tt></b>
-<br>This archive includes a Mac OS X application.
-
-</ul>
-
-<p>Install the .jar and/or Mac OS X application wherever you wish.  
-At runtime, the .jar file is not sensive to the directory
-it is installed in, or the current directory when it's launched.
-
-
-<!--
- * weinre is available under *either* the terms of the modified BSD license *or* the
- * MIT License (2008). See http://opensource.org/licenses/alphabetical for full text.
- * 
- * Copyright (c) 2010, 2011 IBM Corporation
--->
-
-<div class="toc">
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-<p>
-  <a href="Home.html">Home</a>
-- <a href="TestDrive.html">Test Drive</a>
-- <a href="Installing.html">Installing</a>
-- <a href="Running.html">Running</a>
-- <a href="MultiUser.html">Multi-User</a>
-- <a href="Security.html">Security</a>
-- <a href="Building.html">Building</a>
-- <a href="ChangeLog.html">ChangeLog</a>
-- <a href="License.html">License</a>
-
-<br><img src="images/weinre-icon-128x128.png">
-</div>
-
-</body>
-</html>
+<p><a href="http://phonegap.github.com/weinre/">http://phonegap.github.com/weinre/</a>
