--- a/Building.html
+++ b/Building.html
@@ -1,3 +1,4 @@
-<p>This site has moved to phonegap/weinre.  Please update your links.
+<h1>weinre has moved to Apache</h1>
 
-<p><a href="http://phonegap.github.com/weinre/">http://phonegap.github.com/weinre/</a>
+<p>for more information, please see 
+<a href="http://people.apache.org/~pmuellr/weinre/">http://people.apache.org/~pmuellr/weinre/</a>
